tdf#134320: fix XInfobarProvider appendInfoBar for showCloseButton

There was a mix of arguments which caused misinterpretation.

Like this since initial commit:
9e3ba7c3036c4d21e01d6f75ed29a1e8c4208141
author	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2019-11-18 09:08:03 +0100
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2019-11-19 08:51:43 +0100
commit	9e3ba7c3036c4d21e01d6f75ed29a1e8c4208141 (patch)
tree	c648a26f2445955be14aa6e96815c14ec193dddc
parent	b234743dd26e0be4be272d2d2c82f90c67e192b7 (diff)
tdf#97926 Add UNO API for Infobar
This allows creating, updating and removing infobars from macros/extensions.

It also extends the infobar with a primary and a secondary text, so there can
be a bold summary at the beginning at the infobar with a longer text following
in normal letters.
...

Change-Id: Ic3e0b6a9da4da574eb7ca440a881fdcee1dd1132
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97349
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>